--- a/styles/styles.css
+++ b/styles/styles.css
@@ -774,7 +774,9 @@ header {
   border-top-right-radius: 30px;
 }
 .lessons__title-lesson {
+  font-family: var(--second-font);
   font-size: 1.5rem;
+  font-weight: 600;
   text-align: center;
   color: var(--dark-grey);
   margin-bottom: 10px;
@@ -786,6 +788,7 @@ header {
 }
 .lessons__slider {
   background-color: var(--grey-lemon-green);
+  box-shadow: inset 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
   padding: 50px 0;
 }
 .lessons__slide {
@@ -821,6 +824,7 @@ header {
   border: none;
   outline: none;
   border-radius: 10px;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   padding: 8px;
 }
@@ -986,7 +990,7 @@ header {
   padding: 30px;
 }
 .questions__question {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
@@ -1044,8 +1048,7 @@ header {
   gap: 10px;
 }
 .footer__link {
-  max-width: 50px;
-  height: auto;
+  align-self: center;
 }
 .footer__img {
   max-width: 50px;
@@ -1274,6 +1277,9 @@ header {
   .lessons__item, .lessons__link, .lessons__bottom-text {
     font-size: 1.25rem;
   }
+  .lessons__bottom-item {
+    font-size: 1.125rem;
+  }
   .choose {
     padding: var(--section-padding-md);
   }
@@ -1479,6 +1485,9 @@ header {
   .lessons__description {
     font-size: 1rem;
   }
+  .lessons__bottom-item {
+    font-size: 1rem;
+  }
   .choose {
     padding: var(--section-padding-sm);
   }
@@ -1658,6 +1667,12 @@ header {
   .footer__contacts {
     flex-direction: row;
     gap: 34px;
+  }
+  .footer__copyright {
+    font-size: 0.875rem;
+  }
+  .footer__img {
+    max-width: 40px;
   }
 }
 @media (max-width: 375px) {
