--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -898,7 +898,9 @@ header {
     }
 
     &__title-lesson {
+        font-family: var(--second-font);
         font-size: 1.5rem;
+        font-weight: 600;
         text-align: center;
         color: var(--dark-grey);
         margin-bottom: 10px;
@@ -912,6 +914,7 @@ header {
 
     &__slider {
         background-color: var(--grey-lemon-green);
+        box-shadow: inset 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
         padding: 50px 0;
     }
 
@@ -951,6 +954,7 @@ header {
         border: none;
         outline: none;
         border-radius: 10px;
+        box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
         cursor: pointer;
         padding: 8px;
 
@@ -1122,7 +1126,7 @@ header {
     }
 
     &__question {
-        font-weight: 700;
+        font-weight: 500;
         font-size: 1.5rem;
         margin: 0;
         padding: 0;
@@ -1191,8 +1195,7 @@ header {
     }
 
     &__link {
-        max-width: 50px;
-        height: auto;
+        align-self: center;
     }
 
     &__img {
@@ -1515,6 +1518,10 @@ header {
         &__bottom-text {
             font-size: 1.25rem;
         }
+
+        &__bottom-item {
+            font-size: 1.125rem;
+        }
     }
 
     .choose {
@@ -1785,6 +1792,10 @@ header {
         &__description {
             font-size: 1rem;
         }
+
+        &__bottom-item {
+            font-size: 1rem;
+        }
     }
 
     .choose {
@@ -2033,6 +2044,14 @@ header {
         &__contacts {
             flex-direction: row;
             gap: 34px;
+        }
+
+        &__copyright {
+            font-size: 0.875rem;
+        }
+
+        &__img {
+            max-width: 40px;
         }
     }
 }
