--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -44,7 +44,6 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 body {
@@ -57,6 +56,7 @@ body {
 }
 
 .container {
+    overflow-x: hidden;
     max-width: 1440px;
     padding: 0 20px;
     margin: 0 auto;
@@ -103,18 +103,40 @@ body {
     }
 }
 
+.scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgba(13, 48, 35, 0.8);
+    color: var(--beige);
+    border: 1px solid rgba(255, 255, 255, 0.143);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.3);
+    transition: transform 0.3s ease;
+    z-index: 10000;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+
+    @media (max-width: 425px) {
+        width: 40px;
+        height: 40px;
+    }
+}
+
 /* Fonts */
 
 @font-face {
     font-family: 'Cinzel';
-    src: local('cinzel'), url('../fonts/cinzel-regular.woff2') format('woff2'), url('../fonts/cinzel-regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Cinzel';
-    src: local('cinzel'), url('../fonts/cinzel-medium.woff2') format('woff2'), url('../fonts/cinzel-medium.woff') format('woff');
+    src: ('cinzel'), url('../fonts/cinzel-medium.woff2') format('woff2'), url('../fonts/cinzel-medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
@@ -125,29 +147,6 @@ body {
     font-weight: 600;
     font-style: normal;
 }
-
-@font-face {
-    font-family: 'Cinzel';
-    src: local('cinzel'), url('../fonts/cinzel-bold.woff2') format('woff2'), url('../fonts/cinzel-bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Cinzel';
-    src: local('cinzel'), url('../fonts/cinzel-extra-bold.woff2') format('woff2'), url('../fonts/cinzel-extra-bold.woff') format('woff');
-    font-weight: 800;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Cinzel';
-    src: local('cinzel'), url('../fonts/cinzel-black.woff2') format('woff2'), url('../fonts/cinzel-black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-}
-
-//
 
 @font-face {
     font-family: 'Montserrat';
@@ -165,22 +164,8 @@ body {
 
 @font-face {
     font-family: 'Montserrat';
-    src: local('montserrat'), url('../fonts/montserrat-semi-bold.woff2') format('woff2'), url('../fonts/montserrat-semi-bold.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Montserrat';
     src: local('montserrat'), url('../fonts/montserrat-bold.woff2') format('woff2'), url('../fonts//montserrat-bold.woff') format('woff');
     font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('montserrat'), url('../fonts/montserrat-extra-bold.woff2') format('woff2'), url('../fonts/montserrat-extra-bold.woff') format('woff');
-    font-weight: 800;
     font-style: normal;
 }
 
@@ -208,7 +193,6 @@ header {
     height: 100px;
     align-items: center;
     padding: 0 20px;
-    // position: fixed;
     left: 0;
     right: 0;
     max-width: 500px;
@@ -318,6 +302,7 @@ header {
         justify-content: space-between;
         align-items: center;
         gap: 20px;
+        overflow: hidden;
     }
 
     &__block {
@@ -404,24 +389,6 @@ header {
         max-width: 100px;
         width: 100%;
     }
-
-    // &__colorful {
-    //     background: linear-gradient(
-    //         to right,
-    //         #a51931 0%,
-    //         #a51931 20%,
-    //         #ffffff 20%,
-    //         #ffffff 40%,
-    //         #2d2a4a 40%,
-    //         #2d2a4a 60%,
-    //         #ffffff 60%,
-    //         #ffffff 80%,
-    //         #a51931 80%,
-    //         #a51931 100%
-    //     );
-    //     width: 100%;
-    //     height: 100%;
-    // }
 }
 
 /* Adventure */
@@ -451,8 +418,8 @@ header {
             &::before {
                 content: '';
                 position: absolute;
-                top: 112px;
-                left: -260px;
+                top: 42px;
+                left: 24px;
                 background: url(../img/airplane-2.png) no-repeat;
                 background-size: 360px auto;
                 width: 360px;
@@ -480,12 +447,12 @@ header {
             &::after {
                 content: '';
                 position: absolute;
-                bottom: 32px;
-                left: -340px;
-                background: url('../img/airplane.png') no-repeat;
-                background-size: 500px auto;
-                width: 500px;
-                height: 500px;
+                bottom: 80px;
+                right: -140px;
+                background: url(../img/airplane.png) no-repeat;
+                background-size: 450px auto;
+                width: 450px;
+                height: 450px;
                 opacity: 0.3;
                 z-index: -1;
             }
@@ -536,8 +503,6 @@ header {
         display: grid;
         place-content: center;
         gap: 16px;
-        // padding: 40px 50px;
-        // max-width: 100vw;
         overflow: hidden;
     }
 
@@ -617,7 +582,6 @@ header {
         color: var(--beige);
         background-color: var(--zian-green);
         border-radius: 30px;
-        box-shadow: -2px 5px 15px 0px rgba(0, 0, 0, 0.5);
         padding: 50px;
     }
 
@@ -766,12 +730,12 @@ header {
             &:nth-child(3) {
                 top: 80px;
                 right: 120px;
-                transform: translate(40%, -2%);
+                transform: translate(18%, -2%);
             }
             &:nth-child(4) {
                 bottom: 0;
                 left: 5%;
-                transform: translate(-25%, -172%);
+                transform: translate(-12%, -172%);
             }
             &:nth-child(5) {
                 bottom: 0;
@@ -948,9 +912,10 @@ header {
     }
 
     &__button {
+        font-family: var(--main-font);
+        font-weight: 900;
         background-color: var(--grey-lemon-green);
         color: var(--dark-grey);
-        font-weight: bold;
         border: none;
         outline: none;
         border-radius: 10px;
@@ -1233,8 +1198,8 @@ header {
                 left: 30px;
             }
             &:last-of-type::after {
-                bottom: 55px;
-                left: 128px;
+                bottom: 85px;
+                right: -42px;
                 opacity: 0.2;
             }
         }
@@ -1309,7 +1274,7 @@ header {
         &__block-wrap {
             &:last-of-type::after {
                 bottom: 25px;
-                left: 28px;
+                right: 28px;
             }
         }
     }
@@ -1455,16 +1420,19 @@ header {
 
         &__block-wrap {
             &:first-of-type::before {
-                top: 20px;
-                background-size: 320px auto;
-                width: 320px;
-                height: 320px;
+                top: 30px;
+                background-size: 220px auto;
+                width: 220px;
+                height: 220px;
+                rotate: 21deg;
             }
 
             &:first-of-type::after {
-                background-size: 180px auto;
-                width: 180px;
-                height: 180px;
+                background-size: 140px auto;
+                width: 140px;
+                height: 140px;
+                bottom: 68px;
+                right: 55px;
             }
         }
 
@@ -1476,10 +1444,11 @@ header {
 
         &__block-wrap {
             &:last-of-type::after {
-                bottom: 80px;
-                background-size: 430px auto;
-                width: 440px;
-                height: 440px;
+                background-size: 310px auto;
+                width: 310px;
+                height: 310px;
+                right: -57px;
+                bottom: 53px;
             }
         }
     }
@@ -1709,10 +1678,11 @@ header {
             }
 
             &:last-of-type::after {
-                left: 78px;
                 background-size: 240px auto;
                 width: 240px;
                 height: 240px;
+                bottom: 68px;
+                right: -62px;
             }
         }
 
@@ -1931,7 +1901,7 @@ header {
             }
 
             &:last-of-type::after {
-                left: 204px;
+                left: 234px;
                 bottom: 90px;
                 background-size: 170px auto;
                 width: 170px;
