--- a/styles/styles.css
+++ b/styles/styles.css
@@ -501,7 +501,7 @@ header {
 .situations__blocks {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
+  gap: 20px;
   width: 100%;
 }
 .situations__card {
@@ -529,11 +529,12 @@ header {
   padding: 50px;
 }
 .situations__text-bottom {
-  align-self: flex-end;
   width: 100%;
   max-width: 564px;
+  align-self: flex-end;
 }
 .situations__text-wrap {
+  width: 100%;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -820,16 +821,11 @@ header {
   border-radius: 10px;
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-  padding: 8px;
+  padding: 16px;
 }
 .lessons__button:hover {
   transform: scale(1.05);
   transition: transform 0.3s;
-}
-@media (min-width: 1024px) {
-  .lessons__button {
-    padding: 16px;
-  }
 }
 
 .slick-slider {
@@ -1109,7 +1105,7 @@ header {
     font-size: 5rem;
   }
   .statistics__about {
-    grid-template-columns: repeat(3, 370px);
+    grid-template-columns: repeat(3, 298px);
   }
   .adventure {
     padding: var(--section-padding-lg);
@@ -1141,6 +1137,7 @@ header {
   }
   .lessons__img-wrap {
     max-width: 500px;
+    align-self: center;
   }
   .choose {
     padding: var(--section-padding-lg);
@@ -1215,13 +1212,13 @@ header {
     font-size: 1.25rem;
   }
   .statistics__about {
-    grid-template-columns: repeat(3, 260px);
+    grid-template-columns: repeat(3, 225px);
   }
   .adventure {
     padding: var(--section-padding-md);
   }
   .adventure__text-list {
-    grid-template-columns: repeat(auto-fill, minmax(min(314px, 100%), 1fr));
+    grid-template-columns: repeat(3, 1fr);
   }
   .adventure__text {
     font-size: 1.25rem;
@@ -1262,6 +1259,9 @@ header {
   .situations__text-top, .situations__text-bottom {
     font-size: 1.5rem;
     padding: 24px;
+  }
+  .situations__text-bottom {
+    max-width: 404px;
   }
   .situations__block-wrap {
     gap: 30px;
@@ -1358,6 +1358,14 @@ header {
     padding: var(--section-padding-md);
   }
 }
+@media (max-width: 916px) {
+  .adventure__block-wrap:first-of-type::after {
+    background-size: 120px auto;
+    width: 120px;
+    height: 120px;
+    bottom: 52px;
+  }
+}
 @media (max-width: 768px) {
   .nav__link {
     font-size: 1rem;
@@ -1386,7 +1394,7 @@ header {
   }
   .statistics__about {
     gap: 8px 0;
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(3, 188px);
   }
   .statistics__number {
     font-size: 1.75rem;
@@ -1404,33 +1412,31 @@ header {
     font-size: 1.125rem;
   }
   .adventure__wrap-text {
-    font-size: 1rem;
+    font-size: 1.125rem;
   }
   .adventure__block-wrap:first-of-type::before {
-    top: -11px;
+    top: 25px;
     background-size: 280px auto;
     width: 280px;
     height: 280px;
-    left: unset;
-    right: 74px;
     rotate: 25deg;
   }
   .adventure__block-wrap:first-of-type::after {
     background-size: 130px auto;
     width: 140px;
     height: 130px;
-    bottom: 44px;
-    right: 47px;
+    bottom: 65px;
+    right: 74px;
   }
   .adventure__block-wrap:last-of-type::after {
-    background-size: 240px auto;
-    width: 240px;
-    height: 240px;
-    bottom: 68px;
-    right: -62px;
+    background-size: 160px auto;
+    width: 160px;
+    height: 160px;
+    bottom: 58px;
+    right: 78px;
   }
   .adventure__text-list {
-    grid-template-columns: repeat(auto-fill, minmax(min(228px, 100%), 1fr));
+    grid-template-columns: repeat(2, 1fr);
   }
   .situations__section {
     padding: var(--section-padding-sm);
@@ -1517,6 +1523,85 @@ header {
     gap: 10px;
   }
 }
+@media (max-width: 658px) {
+  .adventure__block-wrap:first-of-type::after {
+    bottom: 116px;
+  }
+  .choose__grid {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+  }
+  .choose__central-block_main {
+    grid-column: 1/1;
+    grid-row: 1/1;
+  }
+  .choose__block {
+    max-width: 100%;
+  }
+  .choose__central-image {
+    margin-bottom: -10px;
+  }
+}
+@media (max-width: 620px) {
+  .adventure__block-wrap:last-of-type::after {
+    bottom: 86px;
+    right: 58px;
+  }
+}
+@media (max-width: 614px) {
+  .statistics__about {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .lessons__blocks {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (max-width: 598px) {
+  .adventure__block-wrap:first-of-type::before {
+    top: 53px;
+    background-size: 240px auto;
+    width: 240px;
+    height: 240px;
+  }
+  .questions {
+    background-position: 117% 0%;
+  }
+}
+@media (max-width: 578px) {
+  .adventure__block-wrap:first-of-type::after {
+    bottom: 132px;
+    right: 62px;
+  }
+  .adventure__block-wrap:last-of-type::after {
+    bottom: 118px;
+    right: 50px;
+  }
+  .situations__line {
+    display: none;
+  }
+  .situations__text-wrap, .situations__text-bottom-wrap {
+    justify-content: center;
+  }
+}
+@media (max-width: 546px) {
+  .adventure__wrap-text {
+    font-size: 1rem;
+  }
+  .adventure__block-wrap:last-of-type::after {
+    bottom: 94px;
+  }
+}
+@media (max-width: 533px) {
+  .adventure__block-wrap:last-of-type::after {
+    bottom: 98px;
+    right: 30px;
+  }
+}
+@media (max-width: 477px) {
+  .top__title, .top__text-top, .top__text-bottom {
+    font-size: 1.5rem;
+  }
+}
 @media (max-width: 425px) {
   .nav {
     height: 40px;
@@ -1524,9 +1609,6 @@ header {
   .nav__link {
     font-size: 0.875rem;
     padding: 12px 0;
-  }
-  .top__title, .top__text-top, .top__text-bottom {
-    font-size: 1.5rem;
   }
   .about {
     padding: var(--section-padding-xs);
@@ -1558,11 +1640,10 @@ header {
     gap: 6px;
   }
   .adventure__block-wrap:first-of-type::before {
-    top: 84px;
-    right: 35px;
-    background-size: 220px auto;
-    width: 220px;
-    height: 220px;
+    top: 106px;
+    background-size: 140px auto;
+    width: 140px;
+    height: 140px;
   }
   .adventure__text-list {
     gap: 10px;
@@ -1579,15 +1660,15 @@ header {
     gap: 40px;
   }
   .adventure__block-wrap:first-of-type::after {
-    bottom: 122px;
+    bottom: 160px;
     right: 32px;
   }
   .adventure__block-wrap:last-of-type::after {
-    left: 234px;
-    bottom: 90px;
-    background-size: 170px auto;
-    width: 170px;
-    height: 170px;
+    right: 22px;
+    bottom: 124px;
+    background-size: 130px auto;
+    width: 130px;
+    height: 130px;
   }
   .situations {
     padding: var(--section-padding-xs);
@@ -1611,9 +1692,6 @@ header {
   }
   .lessons {
     padding: var(--section-padding-xs);
-  }
-  .lessons__blocks {
-    grid-template-columns: repeat(1, 1fr);
   }
   .lessons__title-wrap {
     gap: 8px;
@@ -1640,7 +1718,7 @@ header {
     text-align: center;
   }
   .lessons__button {
-    padding: 18px;
+    padding: 10px;
   }
   .choose {
     padding: var(--section-padding-xs);
@@ -1654,7 +1732,7 @@ header {
     grid-row: 1/1;
   }
   .questions {
-    background: none;
+    background-image: none;
   }
   .questions__title {
     padding-bottom: 0;
@@ -1674,28 +1752,47 @@ header {
     max-width: 40px;
   }
 }
+@media (max-width: 400px) {
+  .adventure__block-wrap:last-of-type::after {
+    display: none;
+  }
+}
 @media (max-width: 375px) {
   .adventure__block-wrap:first-of-type::before {
-    top: 96px;
-    right: 27px;
+    top: 134px;
+    left: unset;
+    right: 43px;
   }
   .adventure__block-wrap:first-of-type::after {
-    bottom: 165px;
-    right: 16px;
+    bottom: 95px;
+    right: 26px;
+    background-size: 90px auto;
+    width: 90px;
+    height: 90px;
   }
   .adventure__block-wrap:last-of-type::after {
     left: 178px;
     bottom: 136px;
   }
+  .adventure__text-list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .adventure__wrap {
+    max-width: 270px;
+    max-height: 260px;
+  }
 }
 @media (max-width: 320px) {
   .adventure__block-wrap:first-of-type::before {
-    top: 132px;
-    right: 24px;
+    top: 144px;
+    right: 60px;
   }
   .adventure__block-wrap:first-of-type::after {
-    bottom: 187px;
-    right: -4px;
+    bottom: 102px;
+    right: 6px;
+    background-size: 60px auto;
+    width: 60px;
+    height: 60px;
   }
   .adventure__block-wrap:last-of-type::after {
     left: 138px;
